--- a/templates/nextjs-online-only/package.json
+++ b/templates/nextjs-online-only/package.json
@@ -49,6 +49,7 @@
     "lucide-react": "^0.454.0",
     "luxon": "3.7.2",
     "next": "16.0.10",
+    "next-auth": "^4.24.10",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-day-picker": "9.8.0",
