--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   },
   "type": "module",
   "dependencies": {
-    "prompts": "2.4.2",
-    "commander": "14.0.2"
+    "@bastaai/basta-js": "1.0.0-alpha.6",
+    "commander": "14.0.2",
+    "prompts": "2.4.2"
   }
 }
