--- a/templates/nextjs-online-only/package.json
+++ b/templates/nextjs-online-only/package.json
@@ -9,7 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@bastaai/basta-js": "1.0.0-alpha.4",
+    "@bastaai/basta-js": "1.0.0-alpha.7",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
@@ -45,6 +45,7 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "graphql-ws": "^6.0.6",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "luxon": "3.7.2",
